--- a/p2p/server/client/index.html
+++ b/p2p/server/client/index.html
@@ -56,7 +56,7 @@
 
 		</div>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 		<script src="js/main_bw.js"></script>
 		<script src="js/third_party/graph.js"></script>
